Update gunicorn systemd files

--- a/conf/gunicorn.service
+++ b/conf/gunicorn.service
@@ -3,10 +3,13 @@ Description=gunicorn daemon
 
 [Service]
 Type=forking
-PIDFile=/opt/shopbot/pid/gunicorn.pid
+PIDFile=/run/gunicorn.pid
 User=root
 WorkingDirectory=/opt/shopbot/app
 ExecStart=/opt/shopbot/env/bin/gunicorn -p /opt/shopbot/pid/gunicorn.pid- main:app
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop=/bin/kill -s QUIT $MAINPID
 PrivateTmp=true
+
+[Install]
+WantedBy=multi-user.target
