Fix PID filename

--- a/conf/gunicorn.service
+++ b/conf/gunicorn.service
@@ -6,7 +6,7 @@ Type=forking
 PIDFile=/run/gunicorn.pid
 User=root
 WorkingDirectory=/opt/shopbot/app
-ExecStart=/opt/shopbot/env/bin/gunicorn -p /opt/shopbot/pid/gunicorn.pid- main:app
+ExecStart=/opt/shopbot/env/bin/gunicorn -p /run/gunicorn.pid- main:app
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop=/bin/kill -s QUIT $MAINPID
 PrivateTmp=true
