--- a/conf/gunicorn.service
+++ b/conf/gunicorn.service
@@ -1,15 +1,14 @@
 [Unit]
-Description=gunicorn daemon
+Description=gunicorn-app
 
 [Service]
+ExecStart=/opt/shopbot/env/bin/gunicorn -D -n gunicorn-app -w5 main:app -b 127.0.0.1:8000 --access-logfile /opt/shopbot/logs/gunicorn.net-access.log --error-logfile /opt/shopbot/logs/gunicorn.net-error.log
 Type=forking
-PIDFile=/run/gunicorn.pid
 User=root
-WorkingDirectory=/opt/shopbot/app
-ExecStart=/opt/shopbot/env/bin/gunicorn -p /run/gunicorn.pid- main:app
-ExecReload=/bin/kill -s HUP $MAINPID
-ExecStop=/bin/kill -s QUIT $MAINPID
-PrivateTmp=true
+Restart=always
+StandardOutput=syslog
+StandardError=syslog
+WorkingDirectory = /opt/shopbot/app/
 
 [Install]
 WantedBy=multi-user.target
