correction of the 'not a absolute path' error
Signed-off-by: jlucidar <jlucidar@gmail.com>

--- a/conf/shopbot_api.service
+++ b/conf/shopbot_api.service
@@ -2,7 +2,7 @@
 Description=shopbot-api
 
 [Service]
-ExecStart=node /opt/shopbot/app/shopbot-api/server.js
+ExecStart=/bin/node /opt/shopbot/app/shopbot-api/server.js
 Type=forking
 User=root
 Restart=always
