change type of the service to simple
Signed-off-by: jlucidar <jlucidar@gmail.com>

--- a/conf/shopbot_api.service
+++ b/conf/shopbot_api.service
@@ -2,8 +2,8 @@
 Description=shopbot-api
 
 [Service]
-ExecStart=/bin/node /opt/shopbot/app/shopbot-api/server.js
-Type=forking
+ExecStart=/bin/node /opt/shopbot/app/shopbot-api/server.js &
+Type=simple
 User=root
 Restart=always
 StandardOutput=syslog
