Refactor.  Temporarily remove "pause" flag

--- a/configuration.json
+++ b/configuration.json
@@ -21,5 +21,8 @@
 	{"zfr":720}, 
 	{"xjm":5000000},  
 	{"yjm":5000000},  
-	{"zjm":5000000}  
+	{"zjm":5000000},  
+	{"xTM":25.0},
+	{"yTM":19.0},
+	{"zTM":6.5}
 ]
