--- a/configuration.json
+++ b/configuration.json
@@ -31,5 +31,5 @@
     {"zjh":100000000},
     {"zzb":0.375},
     {"zlb":0.125},
-    {"sr":{"posx":true, "posy":true, "posz":true, "posa":true, "posb":true, "vel":true, "stat":true, "hold":true}}
+    {"sr":{"posx":true, "posy":true, "posz":true, "posa":true, "posb":true, "vel":true, "stat":true, "hold":true, "line":true}}
 ]
