Some cleanup, and move critical config to hard-code

--- a/configuration.json
+++ b/configuration.json
@@ -30,6 +30,5 @@
     {"yjh":100000000},
     {"zjh":100000000},
     {"zzb":0.375},
-    {"zlb":0.125},
-    {"sr":{"posx":true, "posy":true, "posz":true, "posa":true, "posb":true, "vel":true, "stat":true, "hold":true, "line":true}}
+    {"zlb":0.125}
 ]
