Partial update to keyboard control, refactor of sbp runtime

--- a/configuration.json
+++ b/configuration.json
@@ -25,10 +25,13 @@
 	{"yTM":19.0},
 	{"zTM":6.5},
 	{"zsn":3},
-    {"zsx":0},
-    {"xjh":100000000},
-    {"yjh":100000000},
-    {"zjh":100000000},
-    {"zzb":0.375},
-    {"zlb":0.125}
+	{"zsx":0},
+	{"xjh":100000000},
+	{"yjh":100000000},
+	{"zjh":100000000},
+	{"xsv":60},
+	{"ysv":60},
+	{"zsv":60},
+	{"zzb":0.375},
+	{"zlb":0.125}
 ]
