Improve synchronicity in opensbp runtime, implement more of axis setting/zeroing

--- a/configuration.json
+++ b/configuration.json
@@ -1,4 +1,5 @@
 [
+	{"gco":2},
 	{"gun":0},
 	{"1ma":0},
 	{"2ma":1},
@@ -26,6 +27,12 @@
 	{"zTM":6.5},
 	{"zsn":3},
 	{"zsx":0},
+	{"xsn":3},
+	{"xsx":0},
+	{"ysn":3},
+	{"ysx":0},
+	{"asn":0},
+	{"asx":0},
 	{"xjh":100000000},
 	{"yjh":100000000},
 	{"zjh":100000000},
@@ -33,5 +40,6 @@
 	{"ysv":60},
 	{"zsv":60},
 	{"zzb":0.375},
-	{"zlb":0.125}
+	{"zlb":0.125},
+	{"st":0}
 ]
