Fix the bootup configuration situation.

--- a/configuration.json
+++ b/configuration.json
@@ -1,6 +1,6 @@
 [
-	{"gco":2},
 	{"gun":0},
+	{"gco":2},
 	{"1ma":0},
 	{"2ma":1},
 	{"3ma":2},
@@ -40,6 +40,5 @@
 	{"ysv":60},
 	{"zsv":60},
 	{"zzb":0.375},
-	{"zlb":0.125},
-	{"st":0}
+	{"zlb":0.125}
 ]
