Improvements to the homing configuration

--- a/configuration.json
+++ b/configuration.json
@@ -25,20 +25,35 @@
 	{"xTM":25.0},
 	{"yTM":19.0},
 	{"zTM":6.5},
-	{"zsn":3},
-	{"zsx":0},
-	{"xsn":3},
+	{"xjh":10000000000},
+	{"yjh":10000000000},
+	{"zjh":10000000000},
+	{"ajh":10000000000},
+	{"xsn":1},
 	{"xsx":0},
-	{"ysn":3},
+	{"ysn":0},
 	{"ysx":0},
+	{"zsn":0},
+	{"zsx":0},
 	{"asn":0},
 	{"asx":0},
-	{"xjh":100000000},
-	{"yjh":100000000},
-	{"zjh":100000000},
 	{"xsv":60},
 	{"ysv":60},
 	{"zsv":60},
+	{"asv":60},
+	{"xlv":30},
+	{"ylv":30},
+	{"zlv":30},
+	{"alv":30},
+	{"xzb":0.375},
+	{"xlb":0.125},
+	{"yzb":0.375},
+	{"ylb":0.125},
 	{"zzb":0.375},
-	{"zlb":0.125}
+	{"zlb":0.125},
+	{"azb":0.375},
+	{"alb":0.125},
+	{"g55x":0},
+	{"g55y":0},
+	{"st":0}
 ]
