--- a/sbp_settings.json
+++ b/sbp_settings.json
@@ -20,8 +20,5 @@
 	"resMZ" : 1,
 	"resMA" : 1,
 	"resMB" : 1,
-	"resMC" : 1,
-	"cutterDia" : 0.25,
-	"pocketOverlap" : 50.0,
-	"safeZpullUp" : 0.25	
+	"resMC" : 1	
 }
