--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "serialport": "1.4.x",
     "tingodb": "0.2.x",
     "socket.io": "1.1.x",
-    "colors": "0.6.x",
-    "chai": "1.9.x",
-    "sinon": "1.10.x",
-    "mocha": "1.21.x"
+    "colors": "0.6.x"
   },
   "devDependencies": {
     "grunt" : "0.4.x",
     "grunt-groc" : "^0.4.5",
-    "grunt-gh-pages" : "^0.9.1"
+    "grunt-gh-pages" : "^0.9.1",
+    "grunt-open" : "^0.2.3",
+    "chai": "1.9.x",
+    "sinon": "1.10.x",
+    "mocha": "1.21.x"
   },
   "engine": "node 0.10.x"
 }
