--- a/runtime/sbp_settings.json
+++ b/runtime/sbp_settings.json
@@ -1,33 +1,33 @@
-{	
-	"movexy_speed" : 60.0,
-	"movez_speed" : 40.0,
-	"movea_speed" : 60.0,
-	"moveb_speed" : 60.0,
-	"movec_speed" : 60.0,
-	"jogxy_speed" : 120.0,
-	"jogz_speed" : 120.0,
-	"joga_speed" : 120.0,
-	"jogb_speed" : 120.0,
-	"jogc_speed" : 120.0,
-	"unitsX" : 4000,
-	"unitsY" : 4000,
-	"unitsZ" : 4000,
-	"unitsA" : 4000,
-	"unitsB" : 4000,
-	"unitsC" : 4000,
-	"resMX" : 1,
-	"resMY" : 1,
-	"resMZ" : 1,
-	"resMA" : 1,
-	"resMB" : 1,
-	"resMC" : 1,
-	"cutterDia" : 0.25,
-	"pocketOverlap" : 50.0,
-	"safeZpullUp" : 0.25,
-	"gearBoxRatio1" : 1,	
-	"gearBoxRatio2" : 3.6,	
-	"gearBoxRatio3" : 3.6,	
-	"gearBoxRatio4" : 1,	
-	"gearBoxRatio5" : 1,	
-	"gearBoxRatio6" : 1	
+{
+    "movexy_speed": 60,
+    "movez_speed": 40,
+    "movea_speed": 60,
+    "moveb_speed": 60,
+    "movec_speed": 60,
+    "jogxy_speed": 120,
+    "jogz_speed": 120,
+    "joga_speed": 120,
+    "jogb_speed": 120,
+    "jogc_speed": 120,
+    "units1": 2000,
+    "units2": 4000,
+    "units3": 4000,
+    "units4": 4000,
+    "units5": 0.05,
+    "units6": 4000,
+    "gearBoxRatio1": 1,
+    "gearBoxRatio2": 3.6,
+    "gearBoxRatio3": 3.6,
+    "gearBoxRatio4": 1,
+    "gearBoxRatio5": 1,
+    "gearBoxRatio6": 1,
+    "resM1": 1,
+    "resM2": 1,
+    "resM3": 1,
+    "resM4": 1,
+    "resM5": 1,
+    "resM6": 1,
+    "cutterDia": 0.25,
+    "pocketOverlap": 50,
+    "safeZpullUp": 0.25
 }
