--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "grunt-groc" : "^0.4.5",
     "grunt-gh-pages" : "^0.9.1",
     "grunt-open" : "^0.2.3",
+    "grunt-available-tasks" : "^0.5.0",
+    "grunt-mocha-test" : "^0.12.1",
     "chai": "1.9.x",
     "sinon": "1.10.x",
     "mocha": "1.21.x"
