--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serialport": "1.4.x",
     "tingodb": "0.2.x",
     "socket.io": "1.1.x",
-    "colors": "0.6.x"
+    "colors": "0.6.x",
+    "async": "0.9.x"
   },
   "devDependencies": {
     "grunt" : "0.4.x",
