--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "author": "ShopBotTools",
   "repository": "https://github.com/ShopBotTools/FabMo-Engine.git",
   "dependencies": {
+    "adm-zip": "^0.4.4",
     "async": "0.9.x",
     "colors": "0.6.x",
+    "escape-regexp-component": "^1.0.2",
+    "mime": "^1.2.11",
+    "ncp": "^1.0.1",
     "node-simplerwifiscanner": "git+https://github.com/jlucidar/node-simplerwifiscanner.git",
+    "node-uuid": "^1.4.1",
     "process": "0.8.x",
     "q": "^1.0.1",
     "request": "^2.47.0",
