--- a/dashboard/apps/file_executer_old/package.json
+++ b/dashboard/apps/file_executer_old/package.json
@@ -1,12 +1,10 @@
 {
-	"name":"File executer",
+	"name":"File executer Old",
 	"main":"./index.html",
 	"icon":"icon.png",
-	"icon_display":"none",
 	"icon_color":"grey",
 	"version":"1.2.3",
 	"author":"ryan&jimmy",
 	"target":["3d_printer","router","laser_cutter"],
-	"website":"http://www.example.com",
-	"id":"file-executer"
+	"website":"http://www.example.com"
 }
