--- a/dashboard/apps/handwheel/package.json
+++ b/dashboard/apps/handwheel/package.json
@@ -3,8 +3,10 @@
 	"main":"./index.html",
 	"icon":"icon.png",
 	"icon_color":"black",
+	"icon_display":"none",
 	"version":"0.0.1",
 	"author":"Ryan Sturmer",
+	"id":"handwheel",
 	"target":[],
 	"website":"http://www.shopbottools.com/"
 }
