--- a/dashboard/apps/app_manager/package.json
+++ b/dashboard/apps/app_manager/package.json
@@ -2,11 +2,11 @@
 	"name":"App Manager",
 	"main":"./index.html",
 	"icon":"icon.png",
-	"icon_color":"pink",
+	"icon_color":"navy",
 	"icon_display":"none",
 	"version":"0.0.1",
 	"author":"Ryan Sturmer",
-	"target":[],
 	"website":"http://shopbottools.com",
-	"id":"app-manager"
+	"id":"app-manager",
+    "description":"System app for adding/removing/maintaining installed apps"
 }
