--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "restify": "2.8.x",
     "serialport": "^1.6.1",
     "socket.io": "1.3.2",
-    "tingodb": "0.2.x"
+    "tingodb": "0.2.x",
+    "tough-cookie": "^1.1.0"
   },
   "devDependencies": {
     "chai": "1.9.x",
