--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "q": "^1.0.1",
     "request": "^2.55.0",
     "restify": "2.8.x",
-    "serialport": "^1.6.1",
+    "serialport": "1.7.x",
     "socket.io": "1.3.2",
     "tingodb": "0.2.x",
-    "tough-cookie": "^1.1.0"
+    "tough-cookie": "^1.1.0",
+    "connman-simplified":"0.1.2"
   },
   "devDependencies": {
     "chai": "1.9.x",
