--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "socket.io": "1.3.6",
     "tingodb": "0.3.x",
     "tough-cookie": "^2.0.0",
-    "connman-simplified":"0.1.2"
+    "connman-simplified":"0.1.2",
+    "glob": "^5.0.14"
   },
   "devDependencies": {
     "chai": "3.2.x",
