--- a/dashboard/apps/previewer.fma/package.json
+++ b/dashboard/apps/previewer.fma/package.json
@@ -3,6 +3,7 @@
 	"main":"./index.html",
 	"icon":"icon.png",
 	"icon_color":"black",
+	"icon_display":"none",
 	"version":"0.0.1",
 	"author":"Ryan Sturmer",
 	"website":"http://shopbottools.com",
