--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "adm-zip": "^0.4.4",
     "async": "1.4.x",
     "colors": "1.1.x",
+    "connman-simplified": "^0.1.3",
+    "delaunay-triangulate": "^1.1.6",
     "escape-regexp-component": "^1.0.2",
     "fs-extra": "^0.23.1",
+    "glob": "^5.0.14",
     "mime": "^1.2.11",
     "minimist": "^1.1.1",
     "ncp": "^2.0.0",
@@ -22,9 +25,7 @@
     "serialport": "^1.6.1",
     "socket.io": "1.3.6",
     "tingodb": "0.3.x",
-    "tough-cookie": "^2.0.0",
-    "glob": "^5.0.14",
-    "delaunay-triangulate": "^1.1.6"
+    "tough-cookie": "^2.0.0"
   },
   "devDependencies": {
     "chai": "3.2.x",
