--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "serialport": "^1.6.1",
     "socket.io": "1.3.6",
     "tingodb": "0.3.x",
-    "tough-cookie": "^2.0.0"
+    "tough-cookie": "^2.0.0",
+    "lockfile":"1.0.x"
   },
   "devDependencies": {
     "chai": "3.2.x",
