--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "adm-zip": "^0.4.4",
     "async": "1.4.x",
     "colors": "1.1.x",
-    "connman-simplified": "^0.1.3",
     "delaunay-triangulate": "^1.1.6",
     "escape-regexp-component": "^1.0.2",
     "fs-extra": "^0.23.1",
@@ -27,6 +26,9 @@
     "tingodb": "0.3.x",
     "tough-cookie": "^2.0.0",
     "lockfile":"1.0.x"
+  },
+  "optionalDependencies": {
+    "connman-simplified": "^0.1.3"
   },
   "devDependencies": {
     "chai": "3.2.x",
