Fix interoperability issues with editor - some UI tweaks to the apps manager.  Fix bugs in dashboard, add getjobinfo function.

--- a/dashboard/apps/editor.fma/package.json
+++ b/dashboard/apps/editor.fma/package.json
@@ -2,7 +2,7 @@
 	"name":"NC Editor",
 	"main":"./index.html",
 	"icon":"icon.png",
-	"icon_color":"blue",
+	"icon_color":"navy",
 	"icon_display":"none",
 	"version":"0.0.2",
 	"author":"Ryan Sturmer",
