Giving credit to the squad be like

--- a/dashboard/apps/configuration.fma/package.json
+++ b/dashboard/apps/configuration.fma/package.json
@@ -2,7 +2,7 @@
 	"name":"Configuration Editor",
 	"main":"./index.html",
 	"icon":"icon.png",
-	"icon_color":"navy",
+	"icon_color":"#313366",
 	"icon_display":"none",
 	"version":"0.0.1",
 	"author":"Ryan Sturmer",
