--- a/dashboard/apps/network_manager.fma/package.json
+++ b/dashboard/apps/network_manager.fma/package.json
@@ -2,11 +2,11 @@
 	"name":"Network Manager",
 	"main":"./index.html",
 	"icon":"icon.png",
-	"icon_color":"navy",
+	"icon_color":"#313366",
 	"icon_display":"none",
 	"version":"0.0.1",
 	"author":"Ryan Sturmer",
 	"website":"http://shopbottools.com",
 	"id":"network-manager",
-        "description":"System app for configuring network interfaces"
+    "description":"System app for configuring network interfaces"
 }
