--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "socket.io": "1.3.7",
     "tingodb": "0.3.x",
     "tough-cookie": "^2.0.0",
-    "lockfile":"1.0.x",
+    "lockfile":"1.0.x"
   },
   "devDependencies": {
     "chai": "3.2.x",
