--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "tingodb": "0.3.x",
     "tough-cookie": "^2.0.0",
     "lockfile":"1.0.x",
-    "bonjour":"^3.3.1"
+    "bonjour":"jlucidar/bonjour"
   },
   "devDependencies": {
     "chai": "3.2.x",
