Make an npm dependency optional

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "bonjour":"jlucidar/bonjour",
     "passport-local": "jlucidar/passport-restify-local",
     "passport-restify": "^1.0.1",
-    "client-sessions": "^0.7.0",
+    "client-sessions": "^0.7.0"
+  },
+  "optionalDependencies": {
     "udev":"^0.2.0"
   },
   "devDependencies": {
