--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "socket.io": "1.3.7",
     "tingodb": "0.3.x",
     "tough-cookie": "^2.0.0",
-    "lockfile":"1.0.x",
-    "bonjour":"jlucidar/bonjour",
+    "lockfile": "1.0.x",
+    "bonjour": "jlucidar/bonjour",
     "passport-local": "jlucidar/passport-restify-local",
     "passport-restify": "^1.0.1",
     "client-sessions": "^0.7.0"
   },
   "optionalDependencies": {
-    "udev":"^0.2.0"
+    "udev": "^0.2.0"
   },
   "devDependencies": {
     "chai": "3.2.x",
@@ -46,6 +46,7 @@
     "grunt-open": "^0.2.3",
     "grunt-svgmin": "^2.0.1",
     "grunt-svgstore": "^0.5.0",
+    "jsesc": "1.0.0",
     "mocha": "2.2.x",
     "sinon": "1.16.x",
     "svgmin": "^0.1.0"
