--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "author": "ShopBotTools",
   "repository": "https://github.com/ShopBotTools/FabMo-Engine.git",
   "license": "MIT",
+  "main": "dashboard/static/test.js",
   "dependencies": {
     "adm-zip": "^0.4.4",
     "async": "1.4.x",
+    "bonjour": "jlucidar/bonjour",
+    "client-sessions": "^0.7.0",
     "colors": "1.1.x",
+    "css-loader": "^0.23.1",
     "delaunay-triangulate": "^1.1.6",
     "escape-regexp-component": "^1.0.2",
     "fs-extra": "^0.23.1",
     "glob": "^5.0.14",
+    "lockfile": "1.0.x",
     "mime": "^1.2.11",
     "minimist": "^1.1.1",
     "ncp": "^2.0.0",
     "node-uuid": "^1.4.1",
+    "passport-local": "jlucidar/passport-restify-local",
+    "passport-restify": "^1.0.1",
     "path-is-inside": "^1.0.1",
     "process": "0.11.x",
     "q": "^1.0.1",
@@ -23,16 +30,13 @@
     "restify": "4.0.x",
     "serialport": "^2.0.5",
     "socket.io": "1.3.7",
+    "style-loader": "^0.13.1",
     "tingodb": "0.3.x",
     "tough-cookie": "^2.0.0",
-    "lockfile":"1.0.x",
-    "bonjour":"jlucidar/bonjour",
-    "passport-local": "jlucidar/passport-restify-local",
-    "passport-restify": "^1.0.1",
-    "client-sessions": "^0.7.0"
+    "url-loader": "^0.5.7"
   },
   "optionalDependencies": {
-    "udev":"^0.2.0"
+    "udev": "^0.2.0"
   },
   "devDependencies": {
     "chai": "3.2.x",
@@ -58,6 +62,9 @@
     "title": "FabMo-Engine API Documentation"
   },
   "scripts": {
-    "debug": "node server.js --debug"
+    "start": "npm run dist & node server.js",
+    "debug": "npm run dev & node server.js --debug ",
+    "dist": "webpack",
+    "dev": "webpack"
   }
 }
