--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "adm-zip": "^0.4.4",
     "async": "1.4.x",
+    "backbone": "^1.3.3",
     "bonjour": "jlucidar/bonjour",
     "client-sessions": "^0.7.0",
     "colors": "1.1.x",
@@ -15,29 +16,29 @@
     "delaunay-triangulate": "^1.1.6",
     "escape-regexp-component": "^1.0.2",
     "fs-extra": "^0.23.1",
-    "glob": "^5.0.14",
+    "glob": "^5.0.15",
+    "jquery": "^3.1.0",
     "lockfile": "1.0.x",
     "mime": "^1.2.11",
     "minimist": "^1.1.1",
     "ncp": "^2.0.0",
-    "node-uuid": "^1.4.1",
+    "node-uuid": "^1.4.7",
     "passport-local": "jlucidar/passport-restify-local",
     "passport-restify": "^1.0.1",
     "path-is-inside": "^1.0.1",
-    "process": "0.11.x",
+    "process": "^0.11.7",
     "q": "^1.0.1",
-    "request": "^2.55.0",
-    "restify": "4.0.x",
-    "serialport": "^2.0.5",
+    "request": "^2.74.0",
+    "restify": "^4.1.1",
+    "serialport": "^2.1.2",
     "socket.io": "1.3.7",
     "style-loader": "^0.13.1",
     "tingodb": "0.3.x",
-    "tough-cookie": "^2.0.0",
+    "tough-cookie": "^2.3.1",
+    "underscore": "^1.8.3",
     "url-loader": "^0.5.7"
   },
-  "optionalDependencies": {
-    "udev": "^0.2.0"
-  },
+  "optionalDependencies": {},
   "devDependencies": {
     "chai": "3.2.x",
     "chokidar": "^1.0.3",
@@ -52,7 +53,8 @@
     "grunt-svgstore": "^0.5.0",
     "mocha": "2.2.x",
     "sinon": "1.16.x",
-    "svgmin": "^0.1.0"
+    "svgmin": "^0.1.0",
+    "text-loader": "0.0.1"
   },
   "engine": "node 0.10.x",
   "apidoc": {
@@ -62,9 +64,9 @@
     "title": "FabMo-Engine API Documentation"
   },
   "scripts": {
-    "start": "npm run dist & node server.js",
-    "debug": "npm run dev & node server.js --debug ",
-    "dist": "webpack",
+    "start": "npm run dist && node server.js",
+    "debug": "npm run dev && node server.js --debug ",
+    "dist": "webpack -p",
     "dev": "webpack"
   }
 }
