--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-loader": "^0.23.1",
     "delaunay-triangulate": "^1.1.6",
     "escape-regexp-component": "^1.0.2",
+    "extract-text-webpack-plugin": "^1.0.1",
     "fs-extra": "^0.23.1",
     "glob": "^5.0.15",
     "jquery": "^3.1.0",
