dashboard working apps not

--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "client-sessions": "^0.7.0",
     "colors": "1.1.x",
     "css-loader": "^0.23.1",
+    "css-raw-loader": "^0.1.1",
     "delaunay-triangulate": "^1.1.6",
     "escape-regexp-component": "^1.0.2",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "fs-extra": "^0.23.1",
     "glob": "^5.0.15",
     "jquery": "^3.1.0",
@@ -27,7 +29,7 @@
     "passport-local": "jlucidar/passport-restify-local",
     "passport-restify": "^1.0.1",
     "path-is-inside": "^1.0.1",
-    "process": "^0.11.7",
+    "process": "^0.11.8",
     "q": "^1.0.1",
     "request": "^2.74.0",
     "restify": "^4.1.1",
