--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "escape-regexp-component": "^1.0.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "font-awesome": "^4.6.3",
     "fs-extra": "^0.23.1",
     "glob": "^5.0.15",
     "jquery": "^3.1.0",
