--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "font-awesome": "^4.6.3",
     "fs-extra": "^0.23.1",
     "glob": "^5.0.15",
-    "jquery": "^3.1.0",
+    "jquery": "2.2.4",
     "lockfile": "1.0.x",
     "mime": "^1.2.11",
     "minimist": "^1.1.1",
