--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "serialport": "^2.1.2",
     "socket.io": "1.3.7",
     "style-loader": "^0.13.1",
+    "three": "0.72.0",
     "tingodb": "0.3.x",
     "tough-cookie": "^2.3.1",
     "underscore": "^1.8.3",
