--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "mocha": "2.2.x",
     "sinon": "1.16.x",
     "svgmin": "^0.1.0",
-    "text-loader": "0.0.1",
+    "text-loader": "0.0.1"
   },
   "engine": "node 0.10.x",
   "apidoc": {
