--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "svgmin": "^0.1.0",
     "text-loader": "0.0.1"
   },
-  "engine": "node 0.10.x",
+  "engine": "node 0.12.7",
   "apidoc": {
     "name": "FabMo Engine",
     "version": "0.0.0",
