--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "main": "dashboard/static/test.js",
   "config": {
-    "unsafe-perm":true
+    "unsafe-perm": true
   },
   "dependencies": {
     "adm-zip": "^0.4.4",
@@ -19,6 +19,7 @@
     "css-loader": "^0.23.1",
     "css-raw-loader": "^0.1.1",
     "delaunay-triangulate": "^1.1.6",
+    "es6-promise": "^3.2.1",
     "escape-regexp-component": "^1.0.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
@@ -41,6 +42,7 @@
     "serialport": "^2.1.2",
     "socket.io": "1.3.7",
     "style-loader": "^0.13.1",
+    "text-loader": "0.0.1",
     "three": "0.72.0",
     "tingodb": "0.3.x",
     "tough-cookie": "^2.3.1",
