fixing apps, preview in mm, npm run dev for weboack and server start

--- a/package.json
+++ b/package.json
@@ -81,6 +81,6 @@
     "debug": "node server.js --debug ",
     "postinstall": "webpack -p",
     "prod": "webpack -p",
-    "dev": "webpack"
+    "dev": "webpack && node server.js --debug "
   }
 }
