--- a/package.json
+++ b/package.json
@@ -9,65 +9,64 @@
     "unsafe-perm": true
   },
   "dependencies": {
-    "adm-zip": "^0.4.4",
+    "adm-zip": "0.4.4",
     "async": "1.4.x",
-    "backbone": "^1.3.3",
+    "backbone": "1.3.3",
     "bonjour": "jlucidar/bonjour",
-    "chalk": "^1.1.3",
-    "client-sessions": "^0.7.0",
+    "chalk": "1.1.3",
+    "client-sessions": "0.7.0",
     "colors": "1.1.x",
-    "css-loader": "^0.23.1",
-    "css-raw-loader": "^0.1.1",
-    "delaunay-triangulate": "^1.1.6",
-    "es6-promise": "^3.2.1",
-    "escape-regexp-component": "^1.0.2",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "font-awesome": "^4.6.3",
-    "fs-extra": "^0.23.1",
-    "glob": "^5.0.15",
+    "css-loader": "0.23.1",
+    "css-raw-loader": "0.1.1",
+    "delaunay-triangulate": "1.1.6",
+    "es6-promise": "3.2.1",
+    "escape-regexp-component": "1.0.2",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.8.5",
+    "fs-extra": "0.23.1",
+    "glob": "5.0.15",
     "jquery": "2.2.4",
     "lockfile": "1.0.x",
     "mime": "^1.2.11",
-    "minimist": "^1.1.1",
-    "ncp": "^2.0.0",
-    "node-uuid": "^1.4.1",
+    "minimist": "1.1.1",
+    "ncp": "2.0.0",
+    "node-uuid": "1.4.1",
     "passport-local": "jlucidar/passport-restify-local",
-    "passport-restify": "^1.0.1",
-    "path-is-inside": "^1.0.1",
-    "process": "^0.11.8",
-    "q": "^1.0.1",
-    "request": "^2.74.0",
-    "restify": "^4.1.1",
-    "serialport": "^2.1.2",
+    "passport-restify": "1.0.1",
+    "path-is-inside": "1.0.1",
+    "process": "0.11.8",
+    "q": "1.0.1",
+    "request": "2.74.0",
+    "restify": "4.1.1",
+    "serialport": "2.1.2",
     "socket.io": "1.3.7",
-    "style-loader": "^0.13.1",
+    "style-loader": "0.13.1",
     "text-loader": "0.0.1",
     "three": "0.72.0",
     "tingodb": "0.3.x",
-    "tough-cookie": "^2.3.1",
-    "underscore": "^1.8.3",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.2"
+    "tough-cookie": "2.3.1",
+    "underscore": "1.8.3",
+    "url-loader": "0.5.7",
+    "webpack": "1.13.2"
   },
   "optionalDependencies": {
-    "udev": "^0.2.0"
+    "udev": "0.2.0"
   },
   "devDependencies": {
     "chai": "3.2.x",
-    "chokidar": "^1.0.3",
-    "grunt": "^0.4.5",
-    "grunt-apidoc": "^0.10.0",
-    "grunt-available-tasks": "^0.6.0",
-    "grunt-gh-pages": "^0.10.0",
-    "grunt-groc": "^0.6.0",
-    "grunt-mocha-test": "^0.12.1",
-    "grunt-open": "^0.2.3",
-    "grunt-svgmin": "^2.0.1",
-    "grunt-svgstore": "^0.5.0",
+    "chokidar": "1.0.3",
+    "grunt": "0.4.5",
+    "grunt-apidoc": "0.10.0",
+    "grunt-available-tasks": "0.6.0",
+    "grunt-gh-pages": "0.10.0",
+    "grunt-groc": "0.6.0",
+    "grunt-mocha-test": "0.12.1",
+    "grunt-open": "0.2.3",
+    "grunt-svgmin": "2.0.1",
+    "grunt-svgstore": "0.5.0",
     "mocha": "2.2.x",
     "sinon": "1.16.x",
-    "svgmin": "^0.1.0"
+    "svgmin": "0.1.0"
   },
   "engine": "node 0.10.44",
   "apidoc": {
