--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "grunt-available-tasks": "0.6.0",
     "grunt-gh-pages": "0.10.0",
     "grunt-groc": "0.6.0",
-    "grunt-mocha-test": "0.12.1",
     "grunt-open": "0.2.3",
     "grunt-svgmin": "2.0.1",
     "grunt-svgstore": "0.5.0",
@@ -78,8 +77,8 @@
   "scripts": {
     "start": "node server.js",
     "debug": "node server.js --debug ",
-    "postinstall": "webpack -p",
-    "prod": "webpack -p",
-    "dev": "webpack && node server.js --debug "
+    "postinstall": "node_modules/.bin/webpack -p",
+    "prod": "node_modules/.bin/webpack -p",
+    "dev": "node_modules/.bin/webpack && node server.js --debug "
   }
 }
