--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   "scripts": {
     "start": "node server.js",
     "debug": "node server.js --debug ",
+    "webpack" : "node_modules/.bin/webpack",
     "postinstall": "node_modules/.bin/webpack -p",
     "prod": "node_modules/.bin/webpack -p",
     "dev": "node_modules/.bin/webpack && node server.js --debug "
