--- a/dashboard/apps/tour.fma/package.json
+++ b/dashboard/apps/tour.fma/package.json
@@ -5,7 +5,7 @@
 	"icon_color":"#313366",
 	"icon_display":"none",
 	"version":"0.0.1",
-	"author":"Alex Canales",
+	"author":"Brendan Collins",
 	"website":"http://shopbottools.com",
 	"id":"tour",
     "description":"System app for previewing files"
