--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bonjour": "jlucidar/bonjour",
     "chalk": "1.1.3",
     "client-sessions": "0.7.0",
+    "cnctosvg": "1.0.x",
     "colors": "1.1.x",
     "css-loader": "0.23.1",
     "css-raw-loader": "0.1.1",
