--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "file-loader": "0.8.5",
     "font-awesome": "4.6.3",
     "fs-extra": "0.23.1",
+    "gcodetogeometry" : "1.0.x",
     "glob": "5.0.15",
     "jquery": "2.2.4",
     "jsesc": "1.0.0",
@@ -46,6 +47,7 @@
     "socket.io": "1.3.7",
     "style-loader": "0.13.1",
     "text-loader": "0.0.1",
+    "three" : "0.71.0",
     "three": "0.72.0",
     "tingodb": "0.3.x",
     "tough-cookie": "2.3.1",
