--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "process": "0.11.8",
     "q": "^1.0.1",
     "request": "2.74.0",
-    "restify": "4.1.1",
+    "restify": "^5.2.0",
     "serialport": "4.0.7",
     "socket.io": "1.3.7",
     "style-loader": "0.13.1",
