--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "chokidar": "1.0.3",
     "clean-webpack-plugin": "^0.1.17",
     "grunt": "0.4.5",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-apidoc": "0.10.0",
     "grunt-available-tasks": "0.6.0",
     "grunt-gh-pages": "0.10.0",
