--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "q": "^1.0.1",
     "request": "2.74.0",
     "restify": "^5.2.0",
-    "serialport": "4.0.7",
+    "serialport": "^7.1.4",
     "socket.io": "1.3.7",
     "style-loader": "0.13.1",
     "text-loader": "0.0.1",
