--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     "tough-cookie": "2.3.1",
     "underscore": "1.8.3",
     "url-loader": "0.5.7",
-    "webpack": "1.13.2"
+    "webpack": "1.13.2",
+    "wireless-tools": "jlucidar/nodejs-network-tools",
+    "wirelesser": "^2.2.0",
+    "xml2js": "0.4.17"
   },
   "optionalDependencies": {
     "udev": "0.2.0",
