--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "serialport": "^7.1.4",
     "socket.io": "1.3.7",
     "style-loader": "0.13.1",
+    "tmp": "0.0.31",
     "text-loader": "0.0.1",
     "three": "0.72.0",
     "tingodb": "0.3.x",
