--- a/package.json
+++ b/package.json
@@ -13,24 +13,19 @@
     "async": "1.4.x",
     "backbone": "1.3.3",
     "bonjour": "jlucidar/bonjour",
-    "chalk": "1.1.3",
     "client-sessions": "0.7.0",
     "cnctosvg": "1.0.x",
     "colors": "1.1.x",
     "css-loader": "0.23.1",
-    "css-raw-loader": "0.1.1",
     "delaunay-triangulate": "1.1.6",
     "es6-promise": "3.2.1",
     "escape-regexp-component": "1.0.2",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
-    "font-awesome": "4.6.3",
     "fs-extra": "0.23.1",
-    "gcodetogeometry": "1.0.x",
     "glob": "5.0.15",
     "jquery": "2.2.4",
     "jsesc": "1.0.0",
-    "lockfile": "1.0.x",
     "mime": "1.2.11",
     "minimist": "1.1.1",
     "ncp": "2.0.0",
@@ -46,16 +41,12 @@
     "serialport": "^7.1.5",
     "socket.io": "1.3.7",
     "style-loader": "0.13.1",
-    "text-loader": "0.0.1",
-    "three": "0.72.0",
     "tingodb": "0.3.x",
     "tmp": "0.0.31",
-    "tough-cookie": "2.3.1",
     "underscore": "1.8.3",
     "url-loader": "0.5.7",
     "webpack": "1.13.2",
     "wireless-tools": "jlucidar/nodejs-network-tools",
-    "wirelesser": "^2.2.0",
     "xml2js": "0.4.17"
   },
   "optionalDependencies": {
@@ -63,7 +54,6 @@
     "fsevents": "0.3.8"
   },
   "devDependencies": {
-    "chai": "3.2.x",
     "chokidar": "1.0.3",
     "clean-webpack-plugin": "^0.1.17",
     "grunt": "0.4.5",
@@ -71,11 +61,7 @@
     "grunt-available-tasks": "0.6.0",
     "grunt-gh-pages": "0.10.0",
     "grunt-groc": "0.6.0",
-    "grunt-open": "0.2.3",
-    "grunt-svgmin": "2.0.1",
-    "grunt-svgstore": "0.5.0",
-    "sinon": "1.16.x",
-    "svgmin": "0.1.0"
+    "grunt-open": "0.2.3"
   },
   "engine": "node 0.10.44",
   "apidoc": {
