fixing versions toward up-to-date and recommended versions

--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "file-loader": "0.8.5",
     "fs-extra": "0.23.1",
     "glob": "5.0.15",
-    "jquery": "3.5.0",
+    "jquery": "3.6.0",
     "jsesc": "1.0.0",
     "mime": "1.2.11",
-    "minimist": "1.2.3",
+    "minimist": "1.2.5",
     "ncp": "2.0.0",
-    "node-uuid": "1.4.8",
+    "uuid": "8.3.2",
     "pako": "1.0.4",
     "passport-local": "jlucidar/passport-restify-local",
     "passport-restify": "1.0.1",
