--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cnctosvg": "1.0.x",
     "colors": "1.1.x",
     "css-loader": "0.23.1",
+    "debug": "4.3.1"
     "delaunay-triangulate": "1.1.6",
     "es6-promise": "3.2.1",
     "escape-regexp-component": "1.0.2",
@@ -38,7 +39,7 @@
     "q": "^1.0.1",
     "request": "2.74.0",
     "restify": "^5.2.0",
-    "serialport": "^7.1.5",
+    "serialport": "9.0.7",
     "socket.io": "2.4.0",
     "style-loader": "0.13.1",
     "text-loader": "0.0.1",
@@ -51,7 +52,7 @@
     "xml2js": "0.4.17"
   },
   "optionalDependencies": {
-    "udev": "0.2.0",
+    "udev": "0.6.0",
     "fsevents": "0.3.8"
   },
   "devDependencies": {
@@ -64,7 +65,7 @@
     "grunt-groc": "0.6.0",
     "grunt-open": "^0.2.4"
   },
-  "engine": "node 0.10.44",
+  "engine": "node 15.14.0",
   "apidoc": {
     "name": "FabMo Engine",
     "version": "0.0.0",
