--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "delaunay-triangulate": "1.1.6",
     "es6-promise": "3.2.1",
     "escape-regexp-component": "1.0.2",
-    "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "fs-extra": "0.23.1",
     "glob": "5.0.15",
     "jquery": "3.6.0",
     "jsesc": "1.0.0",
     "mime": "1.2.11",
+    "mini-css-extract-plugin": "1.5.0",
     "minimist": "1.2.5",
     "ncp": "2.0.0",
     "uuid": "8.3.2",
@@ -47,23 +47,24 @@
     "tmp": "0.0.31",
     "underscore": "1.8.3",
     "url-loader": "0.5.7",
-    "webpack": "1.13.2",
+    "webpack": "5.34.0",
     "wireless-tools": "jlucidar/nodejs-network-tools",
     "xml2js": "0.4.17"
   },
   "optionalDependencies": {
     "udev": "0.6.0",
-    "fsevents": "0.3.8"
+    "fsevents": "2.3.2"
   },
   "devDependencies": {
-    "chokidar": "1.0.3",
-    "clean-webpack-plugin": "^0.1.17",
-    "grunt": "0.4.5",
-    "grunt-apidoc": "0.10.0",
+    "chokidar": "3.5.1",
+    "clean-webpack-plugin": "3.0.0",
+    "grunt": "1.3.0",
+    "grunt-apidoc": "0.11.0",
     "grunt-available-tasks": "^0.6.3",
     "grunt-gh-pages": "0.10.0",
-    "grunt-groc": "0.6.0",
-    "grunt-open": "^0.2.4"
+    "grunt-groc": "0.7.1",
+    "grunt-open": "^0.2.4",
+    "webpack-cli": "^4.6.0"
   },
   "engine": "node 15.14.0",
   "apidoc": {
@@ -76,7 +77,7 @@
     "start": "node server.js",
     "debug": "node server.js --debug ",
     "webpack": "node_modules/.bin/webpack",
-    "postinstall": "node_modules/.bin/webpack -p",
+    "postinstall": "node_modules/.bin/webpack --progress",
     "prod": "node_modules/.bin/webpack -p",
     "dev": "node_modules/.bin/webpack && node server.js --debug "
   }
