--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "client-sessions": "0.7.0",
     "cnctosvg": "1.0.x",
     "colors": "1.1.x",
-    "css-loader": "0.23.1",
     "debug": "4.3.1",
     "delaunay-triangulate": "1.1.6",
     "es6-promise": "3.2.1",
@@ -27,44 +26,51 @@
     "jquery": "3.6.0",
     "jsesc": "1.0.0",
     "mime": "1.2.11",
-    "mini-css-extract-plugin": "1.5.0",
     "minimist": "1.2.5",
     "ncp": "2.0.0",
-    "uuid": "8.3.2",
     "pako": "1.0.4",
     "passport-local": "jlucidar/passport-restify-local",
-    "passport-restify": "1.0.1",
     "path-is-inside": "1.0.1",
     "process": "0.11.8",
     "q": "^1.0.1",
     "request": "2.74.0",
-    "restify": "^5.2.0",
+    "restify": "^8.5.1",
     "serialport": "9.0.7",
     "socket.io": "2.4.0",
-    "style-loader": "0.13.1",
     "text-loader": "0.0.1",
     "tingodb": "^0.6.1",
     "tmp": "0.0.31",
     "underscore": "1.8.3",
     "url-loader": "0.5.7",
-    "webpack": "5.34.0",
+    "uuid": "8.3.2",
     "wireless-tools": "jlucidar/nodejs-network-tools",
-    "xml2js": "0.4.17"
+    "xml2js": "0.4.17",
+    "node-uuid": "1.4.8"
   },
   "optionalDependencies": {
-    "udev": "0.6.0",
-    "fsevents": "2.3.2"
+    "udev": "0.6.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
+    "@webpack-cli/generators": "^2.0.0",
+    "babel-loader": "^8.2.2",
+    "passport-restify": "^1.0.1",
     "chokidar": "3.5.1",
     "clean-webpack-plugin": "3.0.0",
+    "css-loader": "^0.23.1",
     "grunt": "1.3.0",
     "grunt-apidoc": "0.11.0",
     "grunt-available-tasks": "^0.6.3",
-    "grunt-gh-pages": "0.10.0",
+    "grunt-gh-pages": "4.0.0",
     "grunt-groc": "0.7.1",
     "grunt-open": "^0.2.4",
-    "webpack-cli": "^4.6.0"
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.5.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^5.35.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "engine": "node 15.14.0",
   "apidoc": {
@@ -77,8 +83,14 @@
     "start": "node server.js",
     "debug": "node server.js --debug ",
     "webpack": "node_modules/.bin/webpack",
-    "postinstall": "node_modules/.bin/webpack --progress",
-    "prod": "node_modules/.bin/webpack -p",
-    "dev": "node_modules/.bin/webpack && node server.js --debug "
-  }
+    "postinstall": "node_modules/.bin/webpack --mode=production",
+    "prod": "node_modules/.bin/webpack --mode=production",
+    "dev": "node_modules/.bin/webpack && node server.js --debug ",
+    "build": "webpack --mode=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
+  },
+  "version": "1.0.0"
 }
