--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mime": "1.2.11",
     "minimist": "1.2.5",
     "ncp": "2.0.0",
+    "node-uuid": "1.4.8",
     "pako": "1.0.4",
     "passport-local": "jlucidar/passport-restify-local",
     "path-is-inside": "1.0.1",
@@ -35,7 +36,7 @@
     "q": "^1.0.1",
     "request": "2.74.0",
     "restify": "^8.5.1",
-    "serialport": "9.0.7",
+    "serialport": "^9.0.7",
     "socket.io": "2.4.0",
     "text-loader": "0.0.1",
     "tingodb": "^0.6.1",
@@ -44,8 +45,7 @@
     "url-loader": "0.5.7",
     "uuid": "8.3.2",
     "wireless-tools": "jlucidar/nodejs-network-tools",
-    "xml2js": "0.4.17",
-    "node-uuid": "1.4.8"
+    "xml2js": "0.4.17"
   },
   "optionalDependencies": {
     "udev": "0.6.0"
@@ -67,6 +67,8 @@
     "grunt-open": "^0.2.4",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.5.0",
+    "node-gyp": "^8.0.0",
+    "@mapbox/node-pre-gyp": "^0.17.0",
     "style-loader": "^0.13.1",
     "webpack": "^5.35.0",
     "webpack-cli": "^4.6.0",
@@ -83,12 +85,12 @@
     "start": "node server.js",
     "debug": "node server.js --debug ",
     "webpack": "node_modules/.bin/webpack",
-    "postinstall": "node_modules/.bin/webpack --mode=production",
-    "prod": "node_modules/.bin/webpack --mode=production",
+    "postinstall": "node_modules/.bin/webpack --mode=development",
+    "prod": "node_modules/.bin/webpack --mode=development",
     "dev": "node_modules/.bin/webpack && node server.js --debug ",
-    "build": "webpack --mode=production",
+    "build": "webpack --mode=development",
     "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production",
+    "build:prod": "webpack --mode=development",
     "watch": "webpack --watch",
     "serve": "webpack serve"
   },
