--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "glob": "5.0.15",
     "jquery": "3.6.0",
     "jsesc": "1.0.0",
-    "mime": "1.2.11",
+    "mime": "^2.5.2",
     "minimist": "1.2.5",
     "ncp": "2.0.0",
     "node-uuid": "1.4.8",
@@ -42,7 +42,7 @@
     "tingodb": "^0.6.1",
     "tmp": "0.0.31",
     "underscore": "1.8.3",
-    "url-loader": "0.5.7",
+    "url-loader": "^4.1.1",
     "uuid": "8.3.2",
     "wireless-tools": "jlucidar/nodejs-network-tools",
     "xml2js": "0.4.17"
@@ -53,12 +53,12 @@
   "devDependencies": {
     "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
+    "@mapbox/node-pre-gyp": "^1.0.4",
     "@webpack-cli/generators": "^2.0.0",
     "babel-loader": "^8.2.2",
-    "passport-restify": "^1.0.1",
     "chokidar": "3.5.1",
     "clean-webpack-plugin": "3.0.0",
-    "css-loader": "^0.23.1",
+    "css-loader": "^5.2.4",
     "grunt": "1.3.0",
     "grunt-apidoc": "0.11.0",
     "grunt-available-tasks": "^0.6.3",
@@ -68,7 +68,7 @@
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.5.0",
     "node-gyp": "^8.0.0",
-    "@mapbox/node-pre-gyp": "^1.0.4",
+    "passport-restify": "^1.0.1",
     "style-loader": "^0.13.1",
     "webpack": "^5.35.0",
     "webpack-cli": "^4.6.0",
