Have mime straightened out. Have some fewer deprecated packages, and fewer errors. Need to figuer out why build/index.html isn't getting properly populated with the template. (commented out?)

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "glob": "5.0.15",
     "jquery": "3.6.0",
     "jsesc": "1.0.0",
-    "mime": "^2.5.2",
+    "mime-types": "^2.1.30",
     "minimist": "1.2.5",
     "ncp": "2.0.0",
     "node-uuid": "1.4.8",
