--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "request": "2.74.0",
     "restify": "^8.5.1",
     "serialport": "^9.0.7",
-    "socket.io": "^3.0.5",
+    "socket.io": "2.4.0",
     "text-loader": "0.0.1",
     "tingodb": "^0.6.1",
     "tmp": "0.0.31",
@@ -81,7 +81,7 @@
     "webpack": "node_modules/.bin/webpack",
     "postinstall": "node_modules/.bin/webpack --mode=development",
     "prod": "node_modules/.bin/webpack --mode=development",
-    "dev": "node_modules/.bin/webpack && node --trace-deprecation server.js --debug ",
+    "dev": "node_modules/.bin/webpack && node server.js --debug",
     "build": "webpack --mode=development",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=development",
