--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "es6-promise": "3.2.1",
     "escape-regexp-component": "1.0.2",
     "file-loader": "0.8.5",
+    "foundation-sites": "^6.6.3",
     "fs-extra": "0.23.1",
     "glob": "5.0.15",
     "jquery": "3.6.0",
