--- a/package.json
+++ b/package.json
@@ -83,8 +83,11 @@
     "webpack": "node_modules/.bin/webpack",
     "postinstall": "node_modules/.bin/webpack --mode=development",
     "prod": "node_modules/.bin/webpack --mode=development",
-    "dev": "node_modules/.bin/webpack --mode=development && node server.js --debug",
-    "build": "webpack --mode=development",
+    "dev": "npm run stopdaemon && npm run build && npm run debugserver",
+    "stopdaemon":"sudo systemctl stop fabmo",
+    "build":"webpack --mode=development && npm run copybuiltfiles",
+    "copybuiltfiles":"/bin/mkdir /fabmo/dashboard/build/css; cp /fabmo/dashboard/build/dashboard.css /fabmo/dashboard/build/css/dashboard.css; cp -R /fabmo/dashboard/static/img/favicon /fabmo/dashboard/build/favicon",
+    "debugserver":"node server.js --debug",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=development",
     "watch": "webpack --watch",
