Providing and easy reference of the version of toastr used by the clients

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "text-loader": "0.0.1",
     "tingodb": "^0.6.1",
     "tmp": "0.0.31",
+    "toastr": "^2.1.4",
     "underscore": "1.8.3",
     "url-loader": "^4.1.1",
     "uuid": "3.4.0",
@@ -84,10 +85,10 @@
     "postinstall": "node_modules/.bin/webpack --mode=development",
     "prod": "node_modules/.bin/webpack --mode=development",
     "dev": "npm run stopdaemon && npm run build && npm run debugserver",
-    "stopdaemon":"sudo systemctl stop fabmo",
-    "build":"webpack --mode=development && npm run copybuiltfiles",
-    "copybuiltfiles":"/bin/mkdir /fabmo/dashboard/build/css; cp /fabmo/dashboard/build/dashboard.css /fabmo/dashboard/build/css/dashboard.css; cp -R /fabmo/dashboard/static/img/favicon /fabmo/dashboard/build/favicon",
-    "debugserver":"node server.js --debug",
+    "stopdaemon": "sudo systemctl stop fabmo",
+    "build": "webpack --mode=development && npm run copybuiltfiles",
+    "copybuiltfiles": "/bin/mkdir /fabmo/dashboard/build/css; cp /fabmo/dashboard/build/dashboard.css /fabmo/dashboard/build/css/dashboard.css; cp -R /fabmo/dashboard/static/img/favicon /fabmo/dashboard/build/favicon",
+    "debugserver": "node server.js --debug",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=development",
     "watch": "webpack --watch",
