--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "node-gyp": "^8.0.0",
     "passport-restify": "^1.0.1",
     "style-loader": "^0.13.1",
-    "webpack": "^5.35.0",
+    "webpack": "5.44.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
