--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "mini-css-extract-plugin": "^1.5.0",
     "node-gyp": "^8.0.0",
     "passport-restify": "^1.0.1",
+    "source-map-loader": "^1.0.0",
     "style-loader": "^0.13.1",
     "webpack": "5.44.0",
     "webpack-cli": "^4.6.0",
