--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "style-loader": "^0.13.1",
     "webpack": "5.44.0",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
     "grunt": "0.4.5",
     "grunt-apidoc": "0.10.0",
     "grunt-available-tasks": "^0.6.3",
@@ -100,7 +100,7 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=development",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
     "test": "jest --verbose"
   },
   "version": "1.0.0"
