Adding files that are used by the stock image that should be under version control and adding a target in package.json to deploy said filesw

--- a/files/fabmo.service
+++ b/files/fabmo.service
@@ -8,6 +8,7 @@ User=root
 Restart=always
 StandardOutput=syslog
 StandardError=syslog
+SyslogIdentifier=FBMO
 WorkingDirectory = /fabmo/
 
 [Install]
