--- a/package.json
+++ b/package.json
@@ -91,10 +91,11 @@
     "webpack": "node_modules/.bin/webpack",
     "postinstall": "node_modules/.bin/webpack --mode=development",
     "prod": "node_modules/.bin/webpack --mode=development",
-    "dev": "npm run stopdaemon && npm run build && npm run debugserver",
+    "dev": "npm run build && npm run stopdaemon && npm run debugserver",
     "stopdaemon": "sudo systemctl stop fabmo",
-    "build": "webpack --mode=development && npm run copybuiltfiles",
+    "build": "webpack --mode=development && npm run copybuiltfiles && npm run initSystemFiles",
     "copybuiltfiles": "cp -R /fabmo/dashboard/static/* /fabmo/dashboard/build/; cp /fabmo/dashboard/build/dashboard.css /fabmo/dashboard/build/css/dashboard.css;",
+    "initSystemFiles": "cp /fabmo/files/*.service /etc/systemd/system/; cp /fabmo/files/*.path /etc/systemd/system/; cp /fabmo/files/export_network_config_thumb.sh /home/pi/bin/.; chown pi /home/pi/bin/export_network_config_thumb.sh; chgrp pi /home/pi/bin/export_network_config_thumb.sh; systemctl daemon-reload; systemctl restart export-netcfg-thumbdrive",
     "debugserver": "node server.js --debug",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=development",
