--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,25 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "command": "npm run dev",
-            "name": "Run npm dev",
-            "request": "launch",
-            "type": "node-terminal"
-        },
-        {
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/server.js",
-            "request": "launch",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "type": "pwa-node"
-        },
-        {
             "type": "pwa-chrome",
             "request": "launch",
-            "name": "Open index.html",
-            "file": "/fabmo/dashboard/apps/configuration.fma/index.html"
+            "name": "Launch Chrome against localhost",
+            "url": "http://192.168.33.59/",
+            "webRoot": "${workspaceFolder}"
         }
     ]
 }
