Add a first pass at a prettier target in package.json

--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
 		"watch": "webpack --watch",
 		"serve": "webpack serve",
 		"test": "jest --verbose",
-		"lint": "eslint ."
+		"lint": "eslint .",
+    "prettier": "prettier --write ."
 	},
 	"version": "1.0.0"
 }
