--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"file-loader": "0.8.5",
 		"fs-extra": "0.23.1",
 		"glob": "5.0.15",
+		"got": "11.8.3",
 		"jquery": "2.2.4",
 		"jsesc": "1.0.0",
 		"mime-types": "^2.1.30",
@@ -37,7 +38,6 @@
 		"prettier": "^2.6.2",
 		"process": "0.11.8",
 		"q": "^1.0.1",
-		"request": "2.74.0",
 		"restify": "^8.5.1",
 		"serialport": "^9.2.0",
 		"socket.io": "^4.1.1",
