First pass update of the Docker support.

--- a/package.json
+++ b/package.json
@@ -99,6 +99,9 @@
 		"prod": "node_modules/.bin/webpack --mode=development",
 		"dev": "npm run build && npm run stopdaemon && npm run debugserver",
 		"stopdaemon": "sh build_scripts/stop_fabmo.sh",
+		"install-and-dev": "npm install && npm run dev",
+		"docker:dev": "./build_scripts/run-docker npm run install-and-dev",
+		"docker:bash": "./build_scripts/run-docker bash",
 		"build": "webpack --mode=development && npm run copybuiltfiles && npm run initSystemFiles",
 		"copybuiltfiles": "sh build_scripts/copy_built_files.sh",
 		"initSystemFiles": "sh build_scripts/init_system_files.sh",
