--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
 		"style-loader": "^0.13.1",
 		"webpack": "5.44.0",
 		"webpack-cli": "^4.6.0",
-		"webpack-dev-server": "^3.11.2"
+		"webpack-dev-server": "4.9.0"
 	},
 	"engine": "node 16.14.0",
 	"apidoc": {
