--- a/package.json
+++ b/package.json
@@ -70,11 +70,12 @@
 		"grunt": "0.4.5",
 		"grunt-apidoc": "0.10.0",
 		"grunt-available-tasks": "^0.6.3",
-		"grunt-gh-pages": "0.10.0",
+		"grunt-gh-pages": "4.0.0",
 		"grunt-groc": "0.6.0",
 		"grunt-open": "^0.2.4",
 		"html-webpack-plugin": "^5.3.1",
 		"jest": "^27.4.7",
+		"mime": "3.0.0",
 		"mini-css-extract-plugin": "^1.5.0",
 		"node-gyp": "^8.0.0",
 		"passport-restify": "^1.0.1",
