According to docs.npmjs.com/creating-a-package-json-file, name field must be lower case

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "FabMo-Engine",
+	"name": "fabmo-engine",
 	"description": "The Engine for running the FabMo platform",
 	"author": "ShopBotTools",
 	"repository": "https://github.com/ShopBotTools/FabMo-Engine.git",
