Update restify, requires moment as a dependency

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"jsesc": "1.0.0",
 		"mime-types": "^2.1.30",
 		"minimist": "1.2.5",
+		"moment": "^2.0.0",
 		"ncp": "2.0.0",
 		"pako": "1.0.4",
 		"passport-local": "jlucidar/passport-restify-local",
@@ -37,7 +38,7 @@
 		"prettier": "^2.6.2",
 		"process": "0.11.8",
 		"q": "^1.0.1",
-		"restify": "^8.6.1",
+		"restify": "^11.0.0",
 		"serialport": "^9.2.0",
 		"socket.io": "^4.1.1",
 		"socket.io-client": "^4.1.1",
