--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"adm-zip": "0.5.9",
 		"async": "1.4.x",
 		"backbone": "1.4.0",
-		"bonjour": "jlucidar/bonjour",
+		"bonjour": "3.5.0",
 		"client-sessions": "0.8.0",
 		"cnctosvg": "1.0.x",
 		"colors": "1.1.x",
