Set default start-home app, continued ! (#1037)
* Set default start and home app

* fix typo

* Apps app permanent in left menu; stay in submenu after selection

* fix def-app for default profile; and/or no def-app

---------

Co-authored-by: kyle-kingsbury <kyle.kingsbury@shopbottools.com>

--- a/dashboard/apps/apps.fma/package.json
+++ b/dashboard/apps/apps.fma/package.json
@@ -1,5 +1,5 @@
 {
-	"name":"Home",
+	"name":"Apps",
 	"main":"./index.html",
 	"icon":"icon.png",
 	"icon_color":"#313366",
@@ -7,6 +7,6 @@
 	"version":"0.0.1",
 	"author":"Brendan Collins",
 	"website":"http://shopbottools.com",
-	"id":"home",
-    "description":"System app for submitting CAM files to the tool and managing the job queue"
+	"id":"apps",
+    "description":"System app for managing optionally installed apps"
 }
